--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,6 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.1.9.RELEASE</spring.version>
-		<JAVA_HOME>C:/Program Files/Java/jdk1.7.0_79</JAVA_HOME>
 	</properties>
 
 	<repositories>
@@ -86,6 +85,17 @@
 			<version>2.8</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.13</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>14.0-rc1</version>
+		</dependency>
 		<dependency>
 			<groupId>commons-validator</groupId>
 			<artifactId>commons-validator</artifactId>
