--- a/src/main/filters/qa/config.properties
+++ b/src/main/filters/qa/config.properties
@@ -44,3 +44,4 @@ news.stopword2=library/data/stopword2.txt
 news.stopword=library/data/stopword.txt
 news.singleword=library/data/singleword.txt
 news.weblogPath=library/data/weblog.txt
+log4j.appender.file.File = ./textAnalysis.log
