--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -25,6 +25,7 @@ global=${global}
 proxy=${proxy}
 topentity=${topentity}
 outputdata=${outputdata}
+#txtdata=${#txtdata}
 txtdata=${txtdata}
 userAgent=${userAgent}
 timeout=${timeout}
@@ -35,3 +36,12 @@ newsurldiv=${newsurldiv}
 contentfontdiv=${contentfontdiv}
 contentdiv=${contentdiv}
 counting=${counting}
+news.ICTUniterm=${news.ICTUniterm}
+news.ICTBiterm=${news.ICTBiterm}
+news.ICTTriterm=${news.ICTTriterm}
+news.stopword1=${news.stopword1}
+news.stopword2=${news.stopword2}
+news.stopword=${news.stopword}
+news.singleword=${news.singleword}
+news.weblogPath=${news.weblogPath}
+log4j.appender.file.File =${log4j.appender.file.File }
