--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,17 +1,17 @@
-log4j.rootLogger=WARN,stdout,file
+log4j.rootLogger=INFO,stdout,file
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern = [antispam.service][%d{yyyy-MM-dd HH:mm:ss,SSS}][%p]%m[%t][%l]%n
+log4j.appender.stdout.layout.ConversionPattern = ${project.name}[%d{yyyy-MM-dd HH:mm:ss,SSS}][%p]%m[%t][%l]%n
 #\u914d\u7f6e\u65e5\u5fd7\u8f93\u51fa\u5230\u6587\u4ef6
 log4j.appender.file = org.apache.log4j.RollingFileAppender
 log4j.appender.file.File = ${log4j.appender.file.File}
 log4j.appender.file.Append = true
 log4j.appender.file.Threshold=INFO
-log4j.appender.file.MaxFileSize=100MB
-log4j.appender.file.MaxBackupIndex=20
+log4j.appender.file.MaxFileSize=50MB
+log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout = org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern = [antispam.service][%d{yyyy-MM-dd HH:mm:ss,SSS}][%p]%m[%t][%l]%n
+log4j.appender.file.layout.ConversionPattern = ${project.name}[%d{yyyy-MM-dd HH:mm:ss,SSS}][%p]%m[%t][%l]%n
 
 log4j.logger.com.ibatis=INFO
 log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=INFO 
